--- a/ModeloXGBoost.ipynb
+++ b/ModeloXGBoost.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "ModeloXGBoost",
       "provenance": [],
-      "authorship_tag": "ABX9TyOgX1HTgzQ1dP/2QR8PeEQ1",
+      "authorship_tag": "ABX9TyPKMTBW01H/B2txYZd0/eDD",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -30,6 +30,8 @@
         "id": "13h_Yp3DzNR3"
       },
       "source": [
+        "#MODELO XGBOOST https://medium.com/@jboscomendoza/tutorial-xgboost-en-python-53e48fc58f73\r\n",
+        "\r\n",
         "import xgboost as xgb\r\n",
         "from sklearn.ensemble import RandomForestRegressor\r\n",
         "from sklearn.metrics import log_loss\r\n",
