--- a/Features/Features.ipynb
+++ b/Features/Features.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 314,
+   "execution_count": 67,
    "metadata": {
     "id": "LXFiE36Iiy9o"
    },
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 315,
+   "execution_count": 68,
    "metadata": {
     "id": "AGZPCf4SVV90"
    },
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 316,
+   "execution_count": 69,
    "metadata": {
     "id": "bV4CuYHliy93"
    },
@@ -135,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 317,
+   "execution_count": 70,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -161,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 318,
+   "execution_count": 71,
    "metadata": {
     "id": "PSsdxnWLeRSa"
    },
@@ -175,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 319,
+   "execution_count": 72,
    "metadata": {
     "id": "odP5l-y-ea6u"
    },
@@ -189,7 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 320,
+   "execution_count": 73,
    "metadata": {
     "id": "dG5cIJwfg-HU"
    },
@@ -207,7 +207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 321,
+   "execution_count": 74,
    "metadata": {
     "id": "RYLzLvQVrZEK"
    },
@@ -232,7 +232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 322,
+   "execution_count": 75,
    "metadata": {
     "id": "CV6St44AXMeb"
    },
@@ -254,7 +254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 323,
+   "execution_count": 76,
    "metadata": {
     "id": "IK8KFVKWiy95"
    },
@@ -265,7 +265,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 324,
+   "execution_count": 77,
    "metadata": {
     "id": "Hle8qcmziy94"
    },
@@ -285,7 +285,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 325,
+   "execution_count": 78,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -305,7 +305,7 @@
        "Name: Stage, dtype: int64"
       ]
      },
-     "execution_count": 325,
+     "execution_count": 78,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -317,7 +317,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 326,
+   "execution_count": 79,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -337,7 +337,7 @@
        "Name: Stage, dtype: int64"
       ]
      },
-     "execution_count": 326,
+     "execution_count": 79,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -360,7 +360,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 327,
+   "execution_count": 80,
    "metadata": {
     "id": "kMjNV0o6iy97"
    },
@@ -375,7 +375,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 328,
+   "execution_count": 81,
    "metadata": {
     "id": "upzFTyzriy97"
    },
@@ -390,7 +390,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 329,
+   "execution_count": 82,
    "metadata": {
     "id": "q3lZxfUpiy98"
    },
@@ -405,7 +405,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 330,
+   "execution_count": 83,
    "metadata": {
     "id": "gPembxyCiy98"
    },
@@ -416,7 +416,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 331,
+   "execution_count": 84,
    "metadata": {
     "id": "01aI_Vn2iy98"
    },
@@ -431,7 +431,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 332,
+   "execution_count": 85,
    "metadata": {
     "id": "e8AXEKvTiy99"
    },
@@ -446,7 +446,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 333,
+   "execution_count": 86,
    "metadata": {
     "id": "hBWHJU1Uiy99"
    },
@@ -466,7 +466,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 334,
+   "execution_count": 87,
    "metadata": {
     "id": "BrxMi0oCiy96"
    },
@@ -477,7 +477,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 335,
+   "execution_count": 88,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -503,7 +503,7 @@
        "Name: Target, Length: 16883, dtype: int32"
       ]
      },
-     "execution_count": 335,
+     "execution_count": 88,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -514,7 +514,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 336,
+   "execution_count": 89,
    "metadata": {
     "id": "_g8Oz45Miy9-"
    },
@@ -534,7 +534,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 337,
+   "execution_count": 90,
    "metadata": {
     "id": "83qCpSewNQcj"
    },
@@ -547,7 +547,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 338,
+   "execution_count": 91,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -573,7 +573,7 @@
        "Name: Opportunity_Created_Date, Length: 16883, dtype: datetime64[ns]"
       ]
      },
-     "execution_count": 338,
+     "execution_count": 91,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -584,7 +584,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 339,
+   "execution_count": 92,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -610,7 +610,7 @@
        "Name: Opportunity_Created_Date, Length: 2551, dtype: datetime64[ns]"
       ]
      },
-     "execution_count": 339,
+     "execution_count": 92,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -621,7 +621,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 340,
+   "execution_count": 93,
    "metadata": {
     "id": "fO1Y61bsNjvU"
    },
@@ -655,7 +655,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 341,
+   "execution_count": 94,
    "metadata": {
     "id": "jfudLMijm4Jw"
    },
@@ -681,7 +681,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 342,
+   "execution_count": 95,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -696,7 +696,7 @@
        "True"
       ]
      },
-     "execution_count": 342,
+     "execution_count": 95,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -708,7 +708,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 343,
+   "execution_count": 96,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -723,7 +723,7 @@
        "True"
       ]
      },
-     "execution_count": 343,
+     "execution_count": 96,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -735,7 +735,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 344,
+   "execution_count": 97,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -750,7 +750,7 @@
        "True"
       ]
      },
-     "execution_count": 344,
+     "execution_count": 97,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -771,7 +771,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 345,
+   "execution_count": 98,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -786,7 +786,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 99,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -804,7 +804,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 100,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -819,7 +819,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 101,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -837,7 +837,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 102,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -852,7 +852,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 103,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -870,7 +870,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 104,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -885,7 +885,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 105,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -903,7 +903,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 106,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -930,7 +930,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 107,
    "metadata": {
     "id": "FLtgDP4iZFuN"
    },
@@ -955,7 +955,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 108,
    "metadata": {
     "id": "8jmtin0EaJOx"
    },
@@ -979,7 +979,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 109,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -997,7 +997,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 110,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1019,7 +1019,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 111,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1040,7 +1040,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 112,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1053,11 +1053,33 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Reordenamos las columnas"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 113,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def reorder_columns(df):\n",
+    "    cols = list(df.columns.values)\n",
+    "    cols.pop(cols.index('Target'))\n",
+    "    return df[cols+['Target']]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 114,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train = reorder_columns(train)\n",
+    "test = reorder_columns(test)"
+   ]
   },
   {
    "cell_type": "code",
@@ -1077,7 +1099,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 115,
    "metadata": {
     "id": "ALfUY-81vUC4"
    },
@@ -1119,7 +1141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 116,
    "metadata": {
     "id": "aXCniDuTHnGf"
    },
@@ -1151,7 +1173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 117,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -1159,7 +1181,18 @@
     "id": "LJ9txuKPRP6m",
     "outputId": "961774b6-987f-4ec7-d95e-3300623698c1"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 117,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Verificamos que todos los valores de los 3 set de datos sean NO nulos (la suma debe dar 0)\n",
     "train.isnull().sum().sum() + test.isnull().sum().sum() + test_kaggle.isnull().sum().sum()"
@@ -1176,7 +1209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 118,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
